api-builder/k8s/spring.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: devops-test
spec:
  ports:
  - port: 8080
  selector:
    app: spring-boot
  clusterIP: None
